fix: update footer text color for improved readability

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1070,7 +1070,7 @@ footer {
     /* font-size: calc(3.6vw + 10px); */
     font-weight: 600;
     margin-bottom: 0.5rem; /* Adjusted margin for responsiveness */
-    color: #07677f;
+    color: #003c4b;
 }
 
 .service-description {
